# GnouGo

./: .dockerignore  .gitignore  CHANGELOG.md  GnOuGo.Agent.sln  LICENSE.md  README.md  agents.md  global.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
clients/python/gnougo-agent-cli/: README.md  pyproject.toml  settings.example.json
clients/python/gnougo-agent-cli/examples/: basic.yaml  dynamic-workflow-agent.yaml  human-input.yaml  mcp-discovery-real.yaml  mcp-discovery.yaml
clients/python/gnougo-agent-cli/src/gnougo_agent_cli/: cli.py  mcp_real.py  openai_client.py  settings.py  stubs.py  telemetry.py
clients/python/gnougo-agent-cli/tests/: test_cli.py  test_openai_client.py  test_settings.py
clients/python/gnougo-flow-core/: PORTING_TODO.md  README.md  pyproject.toml
clients/python/gnougo-flow-core/src/gnougo_flow_core/: __init__.py  _jsmini.py  checkpointing.py  cli.py  compilation.py  expressions.py  json_schema.py  models.py  parsing.py  runtime.py  runtime_contracts.py  scripting.py  step_types.py  templating.py
clients/python/gnougo-flow-core/src/gnougo_flow_core/runtime_steps/: __init__.py  emit_executor.py  human_input_executor.py  llm_call_executor.py  loop_parallel_executor.py  loop_sequential_executor.py  mcp_call_executor.py  mcp_list_executor.py  parallel_executor.py  sequence_executor.py  set_executor.py  switch_executor.py  template_render_executor.py  workflow_call_executor.py  workflow_execute_executor.py  workflow_plan_executor.py
clients/python/gnougo-flow-core/tests/: test_cli.py  test_expressions.py  test_format_date.py  test_parallel_executor.py  test_parser_compiler.py  test_reasoning_field.py  test_resume.py  test_runtime_core.py  test_runtime_integrations.py  test_runtime_telemetry.py  test_step_descriptors.py  test_template_render_executor.py  test_templating.py  test_workflow_input_defaults.py  test_workflow_plan_parity.py
librairies/python/gnougo-flow-cli/: README.md  pyproject.toml  settings.example.json
librairies/python/gnougo-flow-cli/examples/: basic.yaml  dynamic-workflow-flow.yaml  human-input.yaml
librairies/python/gnougo-flow-cli/src/gnougo_flow_cli/: __init__.py  cli.py  openai_client.py  settings.py  stubs.py  telemetry.py
librairies/python/gnougo-flow-cli/tests/: test_cli.py  test_openai_client.py  test_settings.py  test_telemetry.py
librairies/python/gnougo-flow-core/: PORTING_TODO.md  README.md  pyproject.toml
librairies/python/gnougo-flow-core/src/gnougo_flow_core/: __init__.py  _jsmini.py  checkpointing.py  cli.py  compilation.py  errors.py  expressions.py  json_schema_contract_validator.py  mcp_cache.py  model_metadata.py  models.py  parsing.py  reasoning.py  runtime.py  runtime_contracts.py  step_types.py  templating.py  workflow_call_resolver.py  workflow_plan_contract_normalizer.py  workflow_plan_diagnostics.py  workflow_plan_dry_run_validator.py  workflow_plan_pipeline_quality_analyzer.py  workflow_plan_semantic_validator.py
librairies/python/gnougo-flow-core/src/gnougo_flow_core/integrations/: __init__.py  mcp.py  routing_llm.py
librairies/python/gnougo-flow-core/src/gnougo_flow_core/runtime_steps/: __init__.py  assert_non_null_executor.py  emit_executor.py  human_input_executor.py  llm_call_executor.py  loop_parallel_executor.py  loop_sequential_executor.py  mcp_call_executor.py  mcp_list_executor.py  parallel_executor.py  sequence_executor.py  template_render_executor.py  workflow_call_executor.py  workflow_execute_executor.py  workflow_plan_executor.py  (+1 more)
librairies/python/gnougo-flow-core/tests/: test_cancellation.py  test_cli.py  test_error_codes_phase6.py  test_expressions.py  test_human_input.py  test_jsmini.py  test_json_schema.py  test_llm_request_sanitizer.py  test_loop_parallel_executor.py  test_loop_sequential_executor.py  test_mcp_call_llm_selection.py  test_mcp_factory.py  test_mcp_progress_timeout_parity.py  test_model_metadata_catalog.py  test_parallel_executor.py  test_parser_compiler.py  test_phase5_mcp_human.py  test_reasoning_field.py  test_resume.py  test_runtime_core.py  test_runtime_integrations.py  test_runtime_logging.py  test_runtime_telemetry.py  test_scripting.py  test_step_content_events.py  test_step_descriptors.py  test_template_render_executor.py  test_workflow_call_executor.py  test_workflow_execute.py  test_workflow_plan_contract_normalizer.py  test_workflow_plan_mcp_guidance.py  test_workflow_plan_parity.py  test_workflow_plan_pipeline_quality_analyzer.py  test_workflow_route_executor.py
(+1137 files in other folders)
