[project]
name = "gnougo-flow-core"
version = "0.1.0"
description = "Python 3.10+ implementation of GnOuGo.Flow.Core"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.6.0",
]

[project.scripts]
gnougo-flow = "gnougo_flow_core.cli:main"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# runtime_steps/*.py intentionally re-export the runtime module via `from gnougo_flow_core.runtime import *`
# to keep executor stubs minimal. Suppress the resulting "may be undefined from star import" noise.
"src/gnougo_flow_core/runtime_steps/*.py" = ["F405"]

